--- a/fableous_fe/package.json
+++ b/fableous_fe/package.json
@@ -40,7 +40,7 @@
         }
     },
     "lint-staged": {
-        "**/*": [
+        "**/*.{js,jsx}": [
             "prettier --write"
         ]
     }
