--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,11 +13,11 @@ build:frontend:
   cache:
     key: "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
     paths:
-      - node_modules/
+      - fableous_fe/node_modules/
   artifacts:
     expire_in: 1 hour
     paths:
-      - build/
+      - fableous_fe/build/
 
 deploy-dev:frontend:
   stage: deploy
