--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,9 @@ stages:
   - build
   - deploy
 
+variables:
+  FE_IMAGE_NAME: fableous_fe
+
 build:frontend:
   stage: build
   image: node:alpine
@@ -10,9 +13,9 @@ build:frontend:
   script:
     - npm install
     - npm run build
-  # only:
-  #   changes:
-  #     - fableous_fe/**
+  only:
+    changes:
+      - fableous_fe/**
   cache:
     key: "$CI_JOB_NAME-$CI_COMMIT_REF_SLUG"
     paths:
@@ -39,9 +42,9 @@ build:frontend:
     - cd fableous_fe
   dependencies:
     - build:frontend
-  # only:
-  #   changes:
-  #     - fableous_fe/**
+  only:
+    changes:
+      - fableous_fe/**
   <<: *docker-base
   
 deploy-dev:frontend:
