--- a/fableous_fe/package.json
+++ b/fableous_fe/package.json
@@ -3,8 +3,11 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "konva": "^7.0.6",
         "react": "^16.13.1",
-        "react-dom": "^16.13.1"
+        "react-dom": "^16.13.1",
+        "react-konva": "^16.13.0-6",
+        "styled-components": "^5.1.1"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^5.11.3",
