--- a/fableous_fe/package.json
+++ b/fableous_fe/package.json
@@ -3,8 +3,12 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@cleandersonlobo/react-mic": "^1.2.0",
         "react": "^16.13.1",
-        "react-dom": "^16.13.1"
+        "react-audio-recorder": "^2.2.0",
+        "react-dom": "^16.13.1",
+        "react-mic": "^12.4.6",
+        "react-voice-recorder": "^2.0.1"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^5.11.3",
