--- a/fableous_fe/package.json
+++ b/fableous_fe/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@cleandersonlobo/react-mic": "^1.2.0",
+        "@material-ui/core": "^4.11.0",
         "react": "^16.13.1",
         "react-audio-recorder": "^2.2.0",
         "react-dom": "^16.13.1",
@@ -11,6 +12,7 @@
         "react-voice-recorder": "^2.0.1"
     },
     "devDependencies": {
+        "@material-ui/icons": "^4.9.1",
         "@testing-library/jest-dom": "^5.11.3",
         "@testing-library/react": "^10.4.8",
         "@testing-library/user-event": "^12.1.1",
