--- a/fableous_fe/package.json
+++ b/fableous_fe/package.json
@@ -4,10 +4,12 @@
     "private": true,
     "dependencies": {
         "@cleandersonlobo/react-mic": "^1.2.0",
+        "immer": "^7.0.8",
         "konva": "^7.0.6",
         "react": "^16.13.1",
         "react-audio-recorder": "^2.2.0",
         "react-dom": "^16.13.1",
+        "react-heartbeat": "^1.0.0",
         "react-konva": "^16.13.0-6",
         "react-mic": "^12.4.6",
         "react-voice-recorder": "^2.0.1",
