add custom chip input for tags

--- a/fableous_fe/package.json
+++ b/fableous_fe/package.json
@@ -4,11 +4,14 @@
     "private": true,
     "dependencies": {
         "@cleandersonlobo/react-mic": "^1.2.0",
+        "@material-ui/core": "^4.11.0",
+        "material-ui-chip-input": "^1.1.0",
         "react": "^16.13.1",
         "react-audio-recorder": "^2.2.0",
         "react-dom": "^16.13.1",
         "react-mic": "^12.4.6",
-        "react-voice-recorder": "^2.0.1"
+        "react-voice-recorder": "^2.0.1",
+        "styled-components": "^5.1.1"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^5.11.3",
