--- a/fableous_fe/package.json
+++ b/fableous_fe/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@cleandersonlobo/react-mic": "^1.2.0",
+        "axios": "^0.20.0",
         "immer": "^7.0.8",
         "konva": "^7.0.6",
         "react": "^16.13.1",
