--- a/fableous_be/requirements.txt
+++ b/fableous_be/requirements.txt
@@ -12,7 +12,9 @@ cryptography==3.0
 daphne==2.5.0
 dj-database-url==0.5.0
 Django==3.1
+django-cors-headers==3.5.0
 django-environ==0.4.5
+django-redis==4.12.1
 gunicorn==20.0.4
 hiredis==1.1.0
 hyperlink==20.0.1
@@ -26,6 +28,7 @@ pycparser==2.20
 PyHamcrest==2.0.2
 pyOpenSSL==19.1.0
 pytz==2020.1
+redis==3.5.3
 service-identity==18.1.0
 six==1.15.0
 sqlparse==0.3.1
