--- a/fableous_be/.example.env
+++ b/fableous_be/.example.env
@@ -1,5 +1,4 @@
 SECRET_KEY=abcdefghijklmnoprstuvwxyz0123456789
 ENV=DEVELOPMENT
-REDIS_HOST=127.0.0.1
-REDIS_PORT=6379
-DATABASE_URL=postgres://user:password@127.0.0.1:5432/postgres
+REDIS_URL=redis://[:password@]host:port/
+DATABASE_URL=postgres://user:password@host:port/postgres
