--- a/fableous_fe/package.json
+++ b/fableous_fe/package.json
@@ -13,6 +13,7 @@
         "react-heartbeat": "^1.0.0",
         "react-konva": "^16.13.0-6",
         "react-mic": "^12.4.6",
+        "react-router-dom": "^5.2.0",
         "react-voice-recorder": "^2.0.1",
         "styled-components": "^5.1.1"
     },
