--- a/fableous_fe/package.json
+++ b/fableous_fe/package.json
@@ -14,6 +14,7 @@
         "react-mic": "^12.4.6",
         "react-voice-recorder": "^2.0.1",
         "styled-components": "^5.1.1",
+        "use-double-tap": "^1.3.0",
         "uuid": "^8.3.0"
     },
     "devDependencies": {
