--- a/fableous_fe/package.json
+++ b/fableous_fe/package.json
@@ -9,8 +9,10 @@
         "immer": "^7.0.8",
         "konva": "^7.0.6",
         "material-ui-chip-input": "^1.1.0",
+        "material-ui-color": "^0.4.6",
         "react": "^16.13.1",
         "react-audio-recorder": "^2.2.0",
+        "react-color": "^2.18.1",
         "react-dom": "^16.13.1",
         "react-heartbeat": "^1.0.0",
         "react-konva": "^16.13.0-6",
