--- a/fableous_fe/package.json
+++ b/fableous_fe/package.json
@@ -6,6 +6,7 @@
         "@cleandersonlobo/react-mic": "^1.2.0",
         "immer": "^7.0.8",
         "konva": "^7.0.6",
+        "lodash": "^4.17.20",
         "react": "^16.13.1",
         "react-audio-recorder": "^2.2.0",
         "react-dom": "^16.13.1",
