--- a/fableous_fe/package.json
+++ b/fableous_fe/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@cleandersonlobo/react-mic": "^1.2.0",
         "@material-ui/core": "^4.11.0",
+        "@material-ui/icons": "^4.9.1",
         "axios": "^0.20.0",
         "immer": "^7.0.8",
         "konva": "^7.0.6",
@@ -22,6 +23,9 @@
         "styled-components": "^5.1.1"
     },
     "devDependencies": {
+        "@iconify/icons-fa-solid": "^1.0.13",
+        "@iconify/icons-mdi": "^1.0.143",
+        "@iconify/react": "^1.1.3",
         "husky": "^4.2.5",
         "lint-staged": "^10.3.0",
         "prettier": "^2.1.1",
