--- a/fableous_be/requirements.txt
+++ b/fableous_be/requirements.txt
@@ -15,6 +15,8 @@ Django==3.1
 django-cors-headers==3.5.0
 django-environ==0.4.5
 django-redis==4.12.1
+djangorestframework==3.12.1
+djangorestframework-simplejwt==4.4.0
 gunicorn==20.0.4
 hiredis==1.1.0
 hyperlink==20.0.1
@@ -26,6 +28,7 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 PyHamcrest==2.0.2
+PyJWT==1.7.1
 pyOpenSSL==19.1.0
 pytz==2020.1
 redis==3.5.3
