--- a/fableous_fe/package.json
+++ b/fableous_fe/package.json
@@ -19,6 +19,7 @@
         "react-mic": "^12.4.6",
         "react-router-dom": "^5.2.0",
         "react-voice-recorder": "^2.0.1",
+        "recoil": "0.0.13",
         "styled-components": "^5.1.1",
         "uuid": "^8.3.1"
     },
