--- a/.gitignore
+++ b/.gitignore
@@ -379,3 +379,4 @@ sketch
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,pycharm+all,python,react,django,webstorm+all
 
 fableous_be/data/*
+*.pdf
